[gd_scene load_steps=7 format=3 uid="uid://dd3qjhp6gmnik"]

[ext_resource type="Script" uid="uid://x7imlnhtc480" path="res://questions/question_euleriano.gd" id="1_dmo6a"]
[ext_resource type="PackedScene" uid="uid://cnihu3ka5c5ul" path="res://scenes/GraphEditor.tscn" id="2_x317v"]
[ext_resource type="Script" uid="uid://qpnqp3mgn3m7" path="res://scripts/LimitedGraphEditor.gd" id="3_ri6nh"]
[ext_resource type="Script" uid="uid://c3u5nmi5oxh5v" path="res://addons/godot_llm_framework/llm.gd" id="4_rnetl"]
[ext_resource type="Script" uid="uid://cmhtv0cbbkpmb" path="res://addons/godot_llm_framework/llm_config.gd" id="5_4rfha"]

[sub_resource type="Resource" id="Resource_7mycd"]
script = ExtResource("5_4rfha")
model = "gemini-flash-latest"
metadata/_custom_type_script = "uid://cmhtv0cbbkpmb"

[node name="Question" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmo6a")
metadata/_custom_type_script = "uid://x7imlnhtc480"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.178418, 0.517243, 0.512353, 1)

[node name="SplitContainer" type="SplitContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSplitContainer" type="VSplitContainer" parent="ColorRect/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8

[node name="VSplitContainer" type="VSplitContainer" parent="ColorRect/SplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.16
dragging_enabled = false

[node name="Label" type="Label" parent="ColorRect/SplitContainer/VSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Crie um grafo com ciclo euleriano utilizando 4 vértices e 4 arestas. No campo abaixo, justifique seu raciocínio."
autowrap_mode = 3

[node name="RespostaDiscursiva" type="TextEdit" parent="ColorRect/SplitContainer/VSplitContainer/VSplitContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_mode = 1

[node name="ButtonSend" type="Button" parent="ColorRect/SplitContainer/VSplitContainer/VSplitContainer/RespostaDiscursiva"]
layout_mode = 0
offset_left = 327.0
offset_top = 164.0
offset_right = 374.0
offset_bottom = 195.0
text = "Send"

[node name="RespostaIA" type="TextEdit" parent="ColorRect/SplitContainer/VSplitContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.5
wrap_mode = 1

[node name="ButtonReturnToMenu" type="Button" parent="ColorRect/SplitContainer/VSplitContainer/RespostaIA"]
visible = false
layout_mode = 0
offset_left = 303.0
offset_top = 298.0
offset_right = 374.0
offset_bottom = 329.0
text = "Return"

[node name="GraphEditor" parent="ColorRect/SplitContainer" instance=ExtResource("2_x317v")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.45
script = ExtResource("3_ri6nh")
max_vertices = 4
max_edges = 4
graph_type = 1
ponderado = false
edge_color = Object(MultiMeshInstance2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"multimesh":null,"texture":null,"script":null)

guide_line = Object(MultiMeshInstance2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":1,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(0, 0),"rotation":0.0,"scale":Vector2(1, 1),"skew":0.0,"multimesh":null,"texture":null,"script":null)

default_weight = Object(OptionButton,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":2,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"clip_contents":false,"custom_minimum_size":Vector2(0, 0),"layout_direction":0,"layout_mode":3,"anchors_preset":0,"anchor_left":0.0,"anchor_top":0.0,"anchor_right":0.0,"anchor_bottom":0.0,"offset_left":0.0,"offset_top":0.0,"offset_right":0.0,"offset_bottom":0.0,"grow_horizontal":1,"grow_vertical":1,"rotation":0.0,"scale":Vector2(1, 1),"pivot_offset":Vector2(0, 0),"size_flags_horizontal":1,"size_flags_vertical":1,"size_flags_stretch_ratio":1.0,"localize_numeral_system":true,"tooltip_text":"","tooltip_auto_translate_mode":0,"focus_neighbor_left":NodePath(""),"focus_neighbor_top":NodePath(""),"focus_neighbor_right":NodePath(""),"focus_neighbor_bottom":NodePath(""),"focus_next":NodePath(""),"focus_previous":NodePath(""),"focus_mode":2,"focus_behavior_recursive":0,"mouse_filter":0,"mouse_behavior_recursive":0,"mouse_force_pass_scroll_events":true,"mouse_default_cursor_shape":0,"shortcut_context":null,"accessibility_name":"","accessibility_description":"","accessibility_live":0,"accessibility_controls_nodes":Array[NodePath]([]),"accessibility_described_by_nodes":Array[NodePath]([]),"accessibility_labeled_by_nodes":Array[NodePath]([]),"accessibility_flow_to_nodes":Array[NodePath]([]),"theme":null,"theme_type_variation":&"","disabled":false,"toggle_mode":true,"button_pressed":false,"action_mode":0,"button_mask":1,"keep_pressed_outside":false,"button_group":null,"shortcut":null,"shortcut_feedback":true,"shortcut_in_tooltip":true,"flat":false,"alignment":0,"text_overrun_behavior":0,"autowrap_mode":0,"autowrap_trim_flags":128,"clip_text":false,"icon_alignment":0,"vertical_icon_alignment":1,"expand_icon":false,"text_direction":0,"language":"","selected":0,"fit_to_longest_item":true,"allow_reselect":false,"item_count":2,"popup/item_0/text":"Add/Edit","popup/item_0/id":0,"popup/item_1/text":"Delete","popup/item_1/id":1,"script":null)

load_graph_ = 0
save_graph_ = null
clear_graph_ = ""

[node name="LLM" type="Node" parent="."]
script = ExtResource("4_rnetl")
config = SubResource("Resource_7mycd")
debug = true
metadata/_custom_type_script = "uid://c3u5nmi5oxh5v"

[connection signal="pressed" from="ColorRect/SplitContainer/VSplitContainer/VSplitContainer/RespostaDiscursiva/ButtonSend" to="." method="_on_button_send_pressed"]
[connection signal="pressed" from="ColorRect/SplitContainer/VSplitContainer/RespostaIA/ButtonReturnToMenu" to="." method="_on_button_return_to_menu_pressed"]
